--- a/beranda.html
+++ b/beranda.html
@@ -17,7 +17,7 @@
 
                     <!---->
                     <ul class="menu-header">
-                           <p style="font-size:larger;color: rgb(44, 8, 248)">PENCET GAMBAR DIBAWAH!</p>
+                           <p style="font-size:larger;color: rgb(44, 8, 248)">PENCET TOMBOL GAMBAR DIBAWAH!</p>
                             <li>
                                     <a href="perbedaan.html"> <p><img src="image/bu1.png" alt="[perbedaan]" width="50" height="50"> </a>
                             </li>
